--- a/styles/style.css
+++ b/styles/style.css
@@ -159,18 +159,14 @@ div{
   font-weight: 600;
 }
 
-.digits{
+.digits {
   margin-bottom: 100px;
   display: flex;
   align-items: center;
   flex-direction: column;
 }
 
-.margin_zero{
-  margin: 0;
-}
-
-.digits__section-title{
+.digits__title {
   display: flex;
   width: 60%;
   justify-content: center;
@@ -178,66 +174,74 @@ div{
   padding: 0 auto;
 }
 
-.h1_digits{
+.digits__title-text {
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
   margin: 0;
 }
 
-.digits__section-subtitle{
+.digits__subtitle {
   display: flex;
   width: 60%;
   justify-content: center;
   padding: 0 auto;
-  /* margin-bottom: 60px; */
 }
 
-.h2_digits{
+.digits__subtitle-text {
+  margin: 0;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
   text-align: center;
 }
 
-.digits__table{
+.digits__table {
   width: 1100px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  /* margin: 60px auto 100px; */
 }
 
-.table__cell{
+.digits__cell {
   width: 250px;
   margin-top: 60px;
 }
 
-.cell__header{
+.digits__header {
   margin-bottom: 20px;
 }
 
-.cell__text{
+.digits__header-text {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+  margin: 0;
+}
+
+.digits__text {
   /* margin-bottom: 20px; */
 }
 
-.cell__description{
+.digits__text-content {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.digits__description {
   margin-top: 20px;
   margin-bottom: 0;
 }
 
-.h3_digits{
-  line-height: 1.15;
-  font-size: 24px;
-  font-weight: 600;
-  margin-top: 0;
-}
-
-.h4_digits{
+.digits__description-content {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+  margin: 0;
 }
+
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
@@ -289,13 +293,13 @@ div{
   right: 48px;
 }
 
-.feynman__photo{
+.feynman__image{
   position: absolute;
   bottom: 0;
   left: 0;
 }
 
-.kaufman{
+/* .kaufman{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -371,10 +375,105 @@ div{
   z-index: 0;
 }
 
-.kaufman__triangle_image{
+.kaufman__triangle-image{
   margin: 0;
   width: 101%;
+} */
+
+.kaufman {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #1f1f1f;
+  position: relative;
 }
+
+.kaufman__title {
+  width: 60%;
+  margin-top: 90px;
+}
+
+.kaufman__title-text {
+  color: white;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  margin: 0;
+}
+
+.kaufman__subtitle {
+  width: 60%;
+  margin-top: 20px;
+}
+
+.kaufman__subtitle-text {
+  color: white;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.kaufman__table {
+  width: 1100px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  z-index: 1;
+  margin-bottom: 90px;
+}
+
+.kaufman__cell {
+  width: 200px;
+  color: white;
+  margin-top: 80px;
+  z-index: 1;
+}
+
+.kaufman__cell_theme_dark {
+  width: 200px; 
+  color: white; 
+  margin-right: 0; 
+  margin-top: 80px; 
+  z-index: 1;
+}
+
+.kaufman__header {
+  margin-bottom: 20px;
+}
+
+.kaufman__header-text {
+  color: white;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+  margin: 0;
+}
+
+.kaufman__text-content {
+  color: white;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.kaufman__triangle{
+  overflow: hidden;
+  width: 877px;
+  height: 640px;
+  position: absolute;
+  top: 0;
+  right: -210px;
+  z-index: 0;
+}
+
+.kaufman__triangle-image{
+  margin: 0;
+  width: 100.7%;
+} 
 
 .footer{
   display: flex;
@@ -426,7 +525,7 @@ div{
 .footer__column-links{
   display: flex;
   flex-direction: column;
-  /* justify-content:space-between; */
+  justify-content:space-between;
   /* gap: 7px; */
   margin: 20px auto 16px;
   
